# serializer version: 1
# name: test_get[json]
  dict({
    'created_at': str,
    'description': '',
    'id': 1,
    'latest_release': dict({
      'created_at': str,
      'github_url': 'http://barker-white.info/',
      'id': 2,
      'name': 'SueoxPSgBHsToacJDXWV',
      'published_at': '2017-04-03T19:37:44.957353Z',
      'ready': False,
      'size': 9954,
    }),
    'name': 'ml-plant-viruses',
    'release_count': 3,
    'releases': list([
      dict({
        'created_at': str,
        'github_url': 'http://barker-white.info/',
        'id': 2,
        'name': 'SueoxPSgBHsToacJDXWV',
        'published_at': '2017-04-03T19:37:44.957353Z',
        'ready': False,
        'size': 9954,
      }),
      dict({
        'created_at': str,
        'github_url': 'http://carlson.biz/',
        'id': 1,
        'name': 'ksMRViIYdJRrnFxjyvDA',
        'published_at': '2006-03-26T16:48:53.303300Z',
        'ready': False,
        'size': 6367,
      }),
      dict({
        'created_at': str,
        'github_url': 'http://harris.com/',
        'id': 3,
        'name': 'ZPGfxsRfFzDHwBJURZHT',
        'published_at': '2004-01-18T01:14:57.831020Z',
        'ready': False,
        'size': 3584,
      }),
    ]),
  })
# ---
# name: test_list[json]
  dict({
    'items': list([
      dict({
        'created_at': str,
        'description': '',
        'id': 2,
        'latest_release': dict({
          'created_at': str,
          'github_url': 'http://chen-smith.com/',
          'id': 6,
          'name': 'TcnBEufnoNVEbPprBmVi',
          'published_at': '2018-01-26T04:06:47.420267Z',
          'ready': False,
          'size': 4632,
        }),
        'name': 'ml-insect-viruses',
        'release_count': 3,
      }),
      dict({
        'created_at': str,
        'description': '',
        'id': 1,
        'latest_release': dict({
          'created_at': str,
          'github_url': 'http://barker-white.info/',
          'id': 2,
          'name': 'SueoxPSgBHsToacJDXWV',
          'published_at': '2017-04-03T19:37:44.957353Z',
          'ready': False,
          'size': 9954,
        }),
        'name': 'ml-plant-viruses',
        'release_count': 3,
      }),
    ]),
    'last_synced_at': None,
  })
# ---
